--- a/src/app/Component/roles/roles.component.html
+++ b/src/app/Component/roles/roles.component.html
@@ -83,8 +83,8 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let item of rolelist">
-                        <td>{{item.roleId}}hello</td>
-                        <td>{{item.role}}abhishek</td>
+                        <td>{{item.roleId}}</td>
+                        <td>{{item.role}}</td>
                     </tr>
                 </tbody>
              </table>
