--- a/src/app/Component/designation/designation.component.html
+++ b/src/app/Component/designation/designation.component.html
@@ -1,7 +1,18 @@
 <div class="row">
-    @for (item of DesignationList; track $index) {
-        <div class="col-3 mt-10">
-            <div class="card" style="width: 18rem;">
+
+  <div class="row">
+
+    @if (isloder) {
+      <button class="btn btn-primary" type="button" disabled>
+        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        Loading...
+      </button>
+  
+    }@else {
+
+      @for (item of DesignationList; track $index) {
+        <div class="col-3" >
+            <div class="card" style="width: 18rem;margin-top: 10px;">
                 <div class="card-body">
                     <h5 class="card-title">EmployeeID=={{item.designationId}}</h5>
                   <h5 class="card-title">Employee&nbsp;Designation=={{item.designation}}</h5>
@@ -11,4 +22,8 @@
               </div>
             </div>       
     } 
+
+    }
+
+  </div>   
 </div>
