--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,31 @@
-<h1>Welcome to Emplyoe-Management-System</h1>
-<app-master></app-master>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+    <a class="navbar-brand" href="#" style="text-decoration: underline; color: red;">Emplyoee-Management-System</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item ">
+          <a class="nav-link" [routerLink]="'master'" routerLinkActive="active">MASTER</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'emplyoe'" routerLinkActive="active">EMPLYOEE</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link " [routerLink]="'client'" routerLinkActive="active">CLIENT</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+
+            <router-outlet></router-outlet>
+
+        </div>
+    </div>
+</div>
+ 
